<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow_background" >

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_text"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_margin="10dp" />

        <LinearLayout
            android:id="@+id/layout_text_ev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp"
            android:gravity="start">

            <EditText
                android:id="@+id/text_edit_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:ems="7"
                android:background="@color/container_background"
                android:inputType="text" />

            <TextView
                android:id="@+id/input_type_text_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_type_text"
                android:layout_gravity="end"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_text_person_name_ev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp"
            android:gravity="start">

            <EditText
                android:id="@+id/text_person_name_edit_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:ems="7"
                android:background="@color/container_background"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/input_type_text_person_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_type_text_person_name"
                android:layout_gravity="end"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_phone_ev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp"
            android:gravity="start">

            <EditText
                android:id="@+id/phone_edit_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:ems="7"
                android:background="@color/container_background"
                android:inputType="phone" />

            <TextView
                android:id="@+id/input_type_phone_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_type_phone"
                android:layout_gravity="end"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_number_ev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp"
            android:gravity="start">

            <EditText
                android:id="@+id/number_edit_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:ems="7"
                android:background="@color/container_background"
                android:inputType="number" />

            <TextView
                android:id="@+id/input_type_number_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_type_number"
                android:layout_gravity="end"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_text_password_ev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp"
            android:gravity="start">

            <EditText
                android:id="@+id/text_password_edit_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:ems="7"
                android:background="@color/container_background"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/input_type_text_password_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_type_text_password"
                android:layout_gravity="end"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_text_email_address_ev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp"
            android:gravity="start">

            <EditText
                android:id="@+id/text_email_address_edit_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:ems="7"
                android:background="@color/container_background"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/input_type_text_email_address_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_type_text_email_address"
                android:layout_gravity="end"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/calendar_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calendar_subtitle_text"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_margin="20dp" />

        <CalendarView
            android:id="@+id/calendar_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>